--- a/src/config-writer/config/app.ini
+++ b/src/config-writer/config/app.ini
@@ -5,3 +5,10 @@ SavePath = D:/temp1/aaa.conf
 VFName = ifs0
 
 [IPAllocate]
+Subnet = 188.188.0.1/16
+
+[EtcdConfig]
+EtcdAddr = http://111 http://222 http://333
+
+[LogConfig]
+LogPath = "D:/temp1/log"
