add etcd client to lock

--- a/src/config-writer/config/app.ini
+++ b/src/config-writer/config/app.ini
@@ -8,7 +8,7 @@ VFName = ifs0
 Subnet = 188.188.0.1/16
 
 [EtcdConfig]
-EtcdAddr = http://111 http://222 http://333
+EtcdAddr = 172.16.196.129:2380 172.16.196.130:2380
 
 [LogConfig]
 LogPath = "D:/temp1/log"
