--- a/src/config-writer/config/app.ini
+++ b/src/config-writer/config/app.ini
@@ -8,7 +8,7 @@ VFName = ifs0
 Subnet = 188.188.0.1/16
 
 [EtcdConfig]
-EtcdAddr = 172.16.196.129:2380 172.16.196.130:2380
+EtcdAddr = 192.168.0.157:2379
 
 [LogConfig]
 LogPath = "D:/temp1/log"
