移动配置文件以及 main.go， 方便二进制读取

--- a/src/config-writer/resource/app.ini
+++ b/src/config-writer/resource/app.ini
@@ -2,7 +2,10 @@
 SavePath = D:/temp1/aaa.conf
 
 [VFConfig]
-VFName = ifs0
+VFName = ifs0     # master name
+Name = sriov-cnf
+Type = sriov
+Mode = bridge
 
 [IPAllocate]
 Subnet = 188.188.0.1/16
