MODIFY: change resource path

--- a/resource/app.ini
+++ b/resource/app.ini
@@ -1,5 +1,5 @@
 [PathConfig]
-SavePath = /opt/aaa.conf
+SavePath = D:\temp1\aaa.conf
 
 [VFConfig]
 VFName = ifs0     # master name
@@ -14,4 +14,4 @@ Subnet = 188.188.0.1/16
 EtcdAddr = 192.168.0.157:2379
 
 [LogConfig]
-LogPath = /var/log
+LogPath = D:\temp1\log
