--- a/deploy/host-local-tools-daemonset.yaml
+++ b/deploy/host-local-tools-daemonset.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1
+apiVersion: v1
 kind: DaemonSet
 metadata:
   name: host-local-tools
@@ -17,7 +17,7 @@ spec:
         image: host-local-tools
         volumeMounts:
         - name: cnfpath
-          mountPath: /opt/cni/example.conf
+          mountPath: /opt/cni/
         - name: varlog
           mountPath: /var/log
         - name: appini
@@ -29,9 +29,9 @@ spec:
 #      nodeSelector:
 #        rdma: support
       volumes:
-      - name: varlog
+      - name: cnfpath
         hostPath:
-          path: /opt/01master.cnf
+          path: /etc/cni/multus/net.d/
       - name: varlog
         hostPath:
           path: /var/log/
