--- a/resource/app.ini
+++ b/resource/app.ini
@@ -1,9 +1,9 @@
 [PathConfig]
-SavePath = D:\temp1\aaa.conf
+SavePath = /opt/cni/sriov-conf.conf
 
 [VFConfig]
-VFName = ifs0     # master name
-Name = sriov-cnf
+VFName = enp24s0     # master name
+Name = sriov-conf
 Type = sriov
 Mode = bridge
 
