bugfix: 1. vfnum file not exists, then use default value 64 2. controlling ip offset, not over the cidr

--- a/deploy/host-local-tools-daemonset.yaml
+++ b/deploy/host-local-tools-daemonset.yaml
@@ -18,6 +18,8 @@ spec:
         volumeMounts:
         - name: cnfpath
           mountPath: /opt/cni/
+        - name: numvfs
+          mountPath: /opt/device/
         - name: varlog
           mountPath: /var/log
         - name: appini
