--- a/resource/app.ini
+++ b/resource/app.ini
@@ -1,5 +1,5 @@
 [PathConfig]
-SavePath = /opt/cni/sriov-conf.conf
+SriovCfgFileName = sriov-conf.conf
 
 [VFConfig]
 VFName = enp24s0     # master name
